--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -58,7 +58,7 @@
       </div>
       <%= image_tag "img/forest.jpg", class:"single-image" %>
       <p class="single-text">
-        <%= @blogs.body %>
+        <%= @blog.body %>
         <!-- body部分 下で変更します -->
         The environment of rain forests is ideal for plants: An estimated<br>
         two-thirds of the world's plant species grow in the rain forest.<br>
